[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/UI/menu_box.png" type="Texture" id=1]
[ext_resource path="res://assets/UI/menu_selector.png" type="Texture" id=2]
[ext_resource path="res://src/DialogueBox/DialogueBox.gd" type="Script" id=3]
[ext_resource path="res://assets/UI/fonts/PKMN RBYGSC.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 8
extra_spacing_bottom = 5
extra_spacing_char = 1
extra_spacing_space = 5
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("TextureRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
resource_name = "Vanish"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("TextureRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="DialogueBox" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 96.0
texture = ExtResource( 1 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="RichTextLabel" type="RichTextLabel" parent="NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 16.0
margin_right = -8.0
margin_bottom = -8.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_text = "PALLET TOWN 
Shades of your
journey await!"
meta_underlined = false
text = "PALLET TOWN 
Shades of your
journey await!"
scroll_active = false

[node name="TextureRect" type="TextureRect" parent="NinePatchRect"]
margin_left = 152.0
margin_top = 28.0
margin_right = 160.0
margin_bottom = 36.0
rect_rotation = 90.0
texture = ExtResource( 2 )
expand = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="NinePatchRect"]
autoplay = "Vanish"
anims/RESET = SubResource( 2 )
anims/Vanish = SubResource( 3 )

[node name="Timer" type="Timer" parent="NinePatchRect"]
wait_time = 0.05
autostart = true

[node name="ScrollTimer" type="Timer" parent="NinePatchRect"]
wait_time = 0.01

[connection signal="timeout" from="NinePatchRect/Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="NinePatchRect/ScrollTimer" to="." method="_on_ScrollTimer_timeout"]
